fix compiler warnings