@@ -39,7 +39,7 @@ public class LoggerMessageFormattingTest {
     @Test
     public void testFormattingOneArg() {
         Logger logger = lc.getLogger(Logger.ROOT_LOGGER_NAME);
-        logger.debug("{}", new Integer(12));
+        logger.debug("{}", Integer.valueOf(12));
         ILoggingEvent event = (ILoggingEvent) listAppender.list.get(0);
         assertEquals("12", event.getFormattedMessage());
     }
@@ -47,7 +47,7 @@ public class LoggerMessageFormattingTest {
     @Test
     public void testFormattingTwoArg() {
         Logger logger = lc.getLogger(Logger.ROOT_LOGGER_NAME);
-        logger.debug("{}-{}", new Integer(12), new Integer(13));
+        logger.debug("{}-{}", Integer.valueOf(12), Integer.valueOf(13));
         ILoggingEvent event = (ILoggingEvent) listAppender.list.get(0);
         assertEquals("12-13", event.getFormattedMessage());
     }
@@ -55,7 +55,7 @@ public class LoggerMessageFormattingTest {
     @Test
     public void testNoFormatting() {
         Logger logger = lc.getLogger(Logger.ROOT_LOGGER_NAME);
-        logger.debug("test", new Integer(12), new Integer(13));
+        logger.debug("test", Integer.valueOf(12), Integer.valueOf(13));
         ILoggingEvent event = (ILoggingEvent) listAppender.list.get(0);
         assertEquals("test", event.getFormattedMessage());
     }
