@@ -203,7 +203,7 @@ public class CorpusModel {
         }
         Object[] argumentArray = new Object[numOfArguments];
         for (int i = 0; i < numOfArguments; i++) {
-            argumentArray[i] = new Long(random.nextLong());
+            argumentArray[i] = Long.valueOf(random.nextLong());
         }
         return argumentArray;
     }
