@@ -13,12 +13,9 @@
  */
 package ch.qos.logback.classic.issue.lbcore243;
 
-import ch.qos.logback.classic.LoggerContext;
-import ch.qos.logback.classic.joran.JoranConfigurator;
-import ch.qos.logback.core.joran.spi.JoranException;
 import org.apache.log4j.xml.DOMConfigurator;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+
+import ch.qos.logback.core.joran.spi.JoranException;
 
 // WARNING This code compiles but does not measure anything useful because log4j-over-slf4j is a dependency. Log4j
 // should be used instead
@@ -39,7 +36,7 @@ public class PerformanceComparatorLog4j {
     }
 
     private static long log4jDirectDebugCall() {
-        Integer j = new Integer(2);
+        Integer j = Integer.valueOf(2);
         long start = System.nanoTime();
         for (int i = 0; i < Common.loop; i++) {
             log4jlogger.debug("SEE IF THIS IS LOGGED " + j + ".");
@@ -50,12 +47,10 @@ public class PerformanceComparatorLog4j {
     static String DIR_PREFIX = "src/test/java/ch/qos/logback/classic/issue/lbcore243/";
 
     static void initLog4jWithoutImmediateFlush() {
-        DOMConfigurator domConfigurator = new DOMConfigurator();
-        domConfigurator.configure(DIR_PREFIX + "log4j_without_immediateFlush.xml");
+        DOMConfigurator.configure(DIR_PREFIX + "log4j_without_immediateFlush.xml");
     }
 
     static void initLog4jWithImmediateFlush() {
-        DOMConfigurator domConfigurator = new DOMConfigurator();
-        domConfigurator.configure(DIR_PREFIX + "log4j_with_immediateFlush.xml");
+        DOMConfigurator.configure(DIR_PREFIX + "log4j_with_immediateFlush.xml");
     }
 }
