@@ -29,9 +29,9 @@ public class TouchAction extends Action {
     public void begin(InterpretationContext ec, String name, Attributes attributes) {
         Integer i = (Integer) ec.getContext().getObject(KEY);
         if (i == null) {
-            ec.getContext().putObject(KEY, new Integer(1));
+            ec.getContext().putObject(KEY, Integer.valueOf(1));
         } else {
-            ec.getContext().putObject(KEY, new Integer(i.intValue() + 1));
+            ec.getContext().putObject(KEY, Integer.valueOf(i.intValue() + 1));
         }
     }
 
